# wui

./: .gitignore  config.h.in  main.cpp  meson.build
apps/: layers.cpp  simple.cpp
include/: egl.h  log.h  sc_layer.h  skia.h  view.h  window.h  wl.h
src/: egl.cpp  keyboard.cpp  output.cpp  pointer.cpp  sc_layer.cpp  seat.cpp  skia.cpp  view.cpp  window.cpp  wl.cpp
subprojects/: yoga.wrap
subprojects/packagefiles/skia/: meson.build
subprojects/packagefiles/yoga/: meson.build
